<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Music</string>
    
    <!-- Splash Screen -->
    <string name="built_by">Built by</string>
    <string name="developer_name">Soumo Mukherjee</string>

    <!-- Sign in dialogue -->
    <string name="sign_in_to_sync_your_preferences">Sign in with Google</string>
    <string name="sign_in_message">Go to Profile to sign in with Google and sync your preferences across devices</string>
    <string name="maybe_later">Maybe later</string>
    <string name="go_to_profile">Go to Profile</string>

    
    <!-- Navigation Drawer -->
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="settings">Settings</string>
    <string name="equalizer">Equalizer</string>
    <string name="player_style">Player styles</string>
    <string name="user_agreement">User Agreement</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="update_automatically">Update automatically</string>
    
    <!-- Search -->
    <string name="search_hint">Search songs, playlists, and artists</string>
    
    <!-- Tabs -->
    <string name="tab_songs">Songs</string>
    <string name="tab_videos">Videos</string>
    <string name="tab_artists">Artists</string>
    <string name="tab_albums">Albums</string>
    <string name="tab_folders">Folders</string>
    
    <!-- Songs Tab -->
    <string name="shuffle_playback">Shuffle playback</string>
    <string name="sort_by">Sort songs by</string>
    <string name="sort_adding_time">Adding time</string>
    <string name="sort_name">Name</string>
    <string name="sort_play_count">Number of times played</string>
    
    <!-- Song Item Menu -->
    <string name="play_later">Play later</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    
    <!-- Bottom Navigation -->
    <string name="my_music">My music</string>
    <string name="duo">Duo</string>
    <string name="downloads">Downloads</string>
    <string name="browse">Browse</string>
    <string name="profile">Profile</string>
    
    <!-- Player Bar -->
    <string name="now_playing">Now Playing</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    
    <!-- Placeholders -->
    <string name="unknown_artist">Unknown artist</string>
    <string name="unknown_album">Unknown album</string>
    <string name="no_songs_found">No songs found</string>
    <string name="browse_placeholder">Browse content coming soon</string>
    
    <!-- Downloads -->
    <string name="downloads_title">Downloads</string>
    <string name="paste_link_hint">Paste video or playlist link here</string>
    <string name="extract">Extract</string>
    <string name="no_downloads">No downloads yet</string>
    <string name="paste_link_description">Paste a link from YouTube, Dailymotion, Instagram, or other supported platforms to extract and download content</string>
    
    <!-- Content Descriptions -->
    <string name="cd_menu">Menu</string>
    <string name="cd_search">Search</string>
    <string name="cd_sort">Sort</string>
    <string name="cd_song_thumbnail">Song thumbnail</string>
    <string name="cd_song_options">Song options</string>
    <string name="cd_play_pause">Play or pause</string>
    <string name="cd_next_track">Next track</string>
    <string name="cd_profile_picture">Profile picture</string>
    <string name="cd_app_icon">App icon</string>
    <string name="audio_play">Play Audio</string>
    
    <!-- Widget -->
    <string name="widget_description">Music player widget</string>
    
    <!-- Duo -->
    <string name="duo_welcome_title">Sync with your Duo</string>
    <string name="duo_welcome_subtitle">Connect with your partner\nand enjoy music together, (Offline/Online both!).</string>
    <string name="duo_connect_button">Connect with your Duo</string>
    <string name="duo_signal_strength">Signal strength</string>
    <string name="duo_status_disconnected">Not connected</string>
    <string name="duo_status_searching">Searching…</string>
    <string name="duo_status_connecting">Connecting…</string>
    <string name="duo_status_connected">Connected</string>
    <string name="duo_enter_partner_id">Enter partner\'s User ID</string>
    <string name="duo_search_nearby">Search nearby devices</string>
    <string name="duo_nearby_devices">Nearby Devices</string>
    <string name="duo_searching">Searching for devices…</string>
    <string name="duo_disconnect">Disconnect</string>
    <string name="duo_no_common_songs">No common songs found\nBoth devices need the same songs</string>
    <string name="duo_no_common_videos">No common videos found</string>
    <string name="duo_no_common_artists">No common artists found</string>
    <string name="duo_no_common_albums">No common albums found</string>
    <string name="duo_no_common_folders">No common folders found</string>
    <string name="duo_resync">Sync Library</string>
    <string name="duo_connect_confirm_title">Connect to device?</string>
    <string name="duo_connect_confirm_message">Do you want to connect to %s?</string>
    <string name="duo_connection_request_title">Connection Request</string>
    <string name="duo_connection_request_message">%s wants to connect with you</string>
    <string name="duo_sort_name">Name</string>
    <string name="duo_sort_time">Time added</string>
    <string name="duo_sort_duration">Duration</string>
    <string name="duo_host_badge">Host</string>
    <string name="duo_guest_badge">Guest</string>
    <string name="duo_wifi_required_title">WiFi Required</string>
    <string name="duo_wifi_required_message">WiFi must be enabled to use Duo. Would you like to enable it?</string>
    <string name="duo_location_required_title">Location Required</string>
    <string name="duo_location_required_message">Location services must be enabled to discover nearby devices. Would you like to enable it?</string>
    <string name="duo_open_settings">Open Settings</string>
    <string name="duo_permission_required">Location permission is required for WiFi Direct</string>
    <string name="duo_your_id">Your Duo ID</string>
    <string name="duo_copy_id">Copy ID</string>
    <string name="duo_id_copied">Duo ID copied to clipboard</string>
    <string name="duo_checking_partner">Checking partner status…</string>
    <string name="duo_partner_offline">User is offline</string>
    <string name="duo_last_seen">Last seen %s</string>
    <string name="duo_notify_when_online">Notify when online</string>
    <string name="duo_notify_requested">You\'ll be notified when they come online</string>
    <string name="duo_invalid_id">Invalid Duo ID</string>
    <string name="duo_user_not_found">User not found</string>
    <string name="duo_cannot_connect_self">Cannot connect to yourself</string>
    <string name="duo_creating_offer">Creating connection…</string>
    <string name="duo_waiting_response">Waiting for response…</string>
    <string name="duo_incoming_request">Incoming Connection</string>
    <string name="duo_request_from">%s wants to connect</string>
    <string name="duo_accept">Accept</string>
    <string name="duo_decline">Decline</string>
    <string name="duo_webrtc_connected">Connected via Internet</string>
    <string name="duo_wifi_direct_connected">Connected via WiFi Direct</string>
    <string name="duo_connection_wifi_direct">WiFi Direct</string>
    <string name="duo_connection_online">Online (WebRTC)</string>
    <string name="duo_song_not_common_title">Song Not Available</string>
    <string name="duo_song_not_common_message">Your duo partner doesn\'t have this song. If you play it, your duo connection will be lost.</string>
    <string name="duo_play_anyway">Play Anyway</string>
    <string name="duo_chat">Chat</string>
    <string name="duo_chat_title">Duo Chat</string>
    <string name="duo_type_message">Type a message</string>
    
    <!-- Firebase -->
    <string name="default_web_client_id" translatable="false">82538693808-8vk4jv8t331p3sd1t83qrnoltefb82m8.apps.googleusercontent.com</string>
    
    <!-- Profile -->
    <string name="guest_user">Guest User</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_confirm_title">Sign Out?</string>
    <string name="sign_out_confirm_message">Are you sure you want to sign out of your account?</string>
    <string name="duo_id_menu">Duo ID</string>
    
    <!-- Duo ID Bottom Sheet -->
    <string name="duo_id_title">Your Duo ID</string>
    <string name="duo_id_subtitle">Share this ID with your partner to connect via Duo</string>
    <string name="duo_your_current_id">Your Current ID</string>
    <string name="duo_change_id">Change ID</string>
    <string name="duo_enter_custom_id">Enter custom 12-digit ID</string>
    <string name="duo_auto_generate">Auto Generate</string>
    <string name="duo_save_id">Save ID</string>
    <string name="duo_sign_in_required">Sign in with Google to get your Duo ID</string>
    <string name="duo_id_changed">Duo ID changed successfully!</string>
    <string name="duo_share_id_message">Connect with me on Duo! My ID is: %s</string>
    
    <!-- Video Player -->
    <string name="video_options">Video options</string>
    <string name="video_share">Share video</string>
    <string name="video_delete">Delete video</string>
    <string name="video_info">Video info</string>
    <string name="video_playing">Now playing video</string>
    
    <!-- File Sharing -->
    <string name="file_share_title">Direct Share</string>
    <string name="file_share_long_press_hint">Long press to select files for sharing</string>
    <string name="file_share_selected_count">%d file(s) selected</string>
    <string name="file_share_send">Share Files</string>
    <string name="file_share_confirm_title">Share Files?</string>
    <string name="file_share_confirm_message">Send %d file(s) (%s) to your Duo partner?</string>
    <string name="file_share_sending">Sending files…</string>
    <string name="file_share_receiving">Receiving files…</string>
    <string name="file_share_complete">Transfer complete!</string>
    <string name="file_share_failed">Transfer failed</string>
    <string name="file_share_cancelled">Transfer cancelled</string>
    <string name="file_share_incoming_title">Incoming Files</string>
    <string name="file_share_incoming_message">%s wants to send you %d file(s) (%s)</string>
    <string name="file_share_accept">Accept</string>
    <string name="file_share_reject">Reject</string>
    <string name="file_share_progress">%s - %d%%</string>
    <string name="file_share_speed">%s/s</string>
    <string name="file_share_no_videos">No videos found</string>
    <string name="file_share_no_artists">No artists found</string>
    <string name="file_share_no_albums">No albums found</string>
    <string name="file_share_no_folders">No folders found</string>
    <string name="cd_back">Go back</string>
    
    <!-- File Transfer Notification -->
    <string name="notification_channel_file_transfer">File Transfer</string>
    <string name="notification_file_transfer_title">Duo File Transfer</string>
    <string name="notification_file_sending">Sending: %s</string>
    <string name="notification_file_receiving">Receiving: %s</string>
    
    <!-- Song Actions -->
    <string name="delete_song_confirm">Are you sure you want to delete \"%s\"?</string>
    <string name="song_deleted">\"%s\" deleted</string>
    <string name="delete_failed">Failed to delete song</string>
    <string name="added_to_queue">Added to queue</string>
</resources>
